fix: remove circle end on small sizes

--- a/site/assets/src/scss/utilities/shapes.scss
+++ b/site/assets/src/scss/utilities/shapes.scss
@@ -32,9 +32,14 @@
     border-start-end-radius: var(--border-radius);
     border-end-end-radius: var(--border-radius);
 }
-.circle-end {
+.circle-end-small {
     border-start-end-radius: 1000px;
     border-end-end-radius: 1000px;
+}
+@media (max-width: $break-sm) {
+    .circle-end-small {
+        border-radius: unset;
+    }
 }
 
 .clip-rounded-end {
