--- a/site/assets/src/scss/variables.scss
+++ b/site/assets/src/scss/variables.scss
@@ -2,6 +2,7 @@
 $small-margin: 10px;
 
 $min-width: 320px;
+$break-sm: 375px;
 $break-md: 700px;
 $break-lg: 1023px;
 $max-width: 1500px;
